--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <a href="./this_month_grid_dark_center/index.html" class="clock-link"> this month, grid, dark, center calendar</a>
     <a href="./this_month_grid_dark_center_highlight_today/index.html" class="clock-link"> this month, grid, dark, center, highlight today calendar</a>
   </div>
-  <footer> <a href="https://qiita.com/kubo4ka/" target="_blank">about</a></footer>
+  <footer> <a href="https://qiita.com/kubo4ka/items/f6fe6806ec743cf6dcaa" target="_blank">about</a></footer>
 </body>
 
 </html>
